--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "image-generation:dev": "nest start --config app/image-generation.config.app.json --watch",
     "sequence-diagram:generate-code": "node dist/app/sequence-diagram.generate-code.app",
     "sequence-diagram:generate-code:dev": "nest start --config app/sequence-diagram.generate-code.config.app.json --watch",
+    "sequence-diagram:generate-documentation": "node dist/app/sequence-diagram.generate-documentation.app",
+    "sequence-diagram:generate-documentation:dev": "nest start --config app/sequence-diagram.generate-documentation.config.app.json --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "jest",
